# NBFC-UI

./: .gitignore  CMakeLists.txt  Config.json  LICENSE  README.md  UI.ui  main.cpp  nbfc-ui.desktop
resources/: UI.ui  resources.qrc
scripts/: install.sh  test.sh  uninstall.sh  update.sh
src/: main.cpp
